# pkg/restapi/operations/payments/get_payment_responses.go
@@ -1,0 +1,58 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package payments
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	models "github.com/volmedo/pAPI/pkg/models"
+)
+
+// GetPaymentOKCode is the HTTP code returned for type GetPaymentOK
+const GetPaymentOKCode int = 200
+
+/*GetPaymentOK Payment details
+
+swagger:response getPaymentOK
+*/
+type GetPaymentOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.PaymentDetailsResponse `json:"body,omitempty"`
+}
+
+// NewGetPaymentOK creates GetPaymentOK with default headers values
+func NewGetPaymentOK() *GetPaymentOK {
+
+	return &GetPaymentOK{}
+}
+
+// WithPayload adds the payload to the get payment o k response
+func (o *GetPaymentOK) WithPayload(payload *models.PaymentDetailsResponse) *GetPaymentOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get payment o k response
+func (o *GetPaymentOK) SetPayload(payload *models.PaymentDetailsResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetPaymentOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
