# pkg/restapi/operations/payments_api.go
@@ -42,6 +42,9 @@ func NewPaymentsAPI(spec *loads.Document) *PaymentsAPI {
 		PaymentsCreatePaymentHandler: payments.CreatePaymentHandlerFunc(func(params payments.CreatePaymentParams) middleware.Responder {
 			return middleware.NotImplemented("operation PaymentsCreatePayment has not yet been implemented")
 		}),
+		PaymentsGetPaymentHandler: payments.GetPaymentHandlerFunc(func(params payments.GetPaymentParams) middleware.Responder {
+			return middleware.NotImplemented("operation PaymentsGetPayment has not yet been implemented")
+		}),
 	}
 }
 
@@ -75,6 +78,8 @@ type PaymentsAPI struct {
 
 	// PaymentsCreatePaymentHandler sets the operation handler for the create payment operation
 	PaymentsCreatePaymentHandler payments.CreatePaymentHandler
+	// PaymentsGetPaymentHandler sets the operation handler for the get payment operation
+	PaymentsGetPaymentHandler payments.GetPaymentHandler
 
 	// ServeError is called when an error is received, there is a default handler
 	// but you can set your own with this
@@ -140,6 +145,10 @@ func (o *PaymentsAPI) Validate() error {
 
 	if o.PaymentsCreatePaymentHandler == nil {
 		unregistered = append(unregistered, "payments.CreatePaymentHandler")
+	}
+
+	if o.PaymentsGetPaymentHandler == nil {
+		unregistered = append(unregistered, "payments.GetPaymentHandler")
 	}
 
 	if len(unregistered) > 0 {
@@ -244,6 +253,11 @@ func (o *PaymentsAPI) initHandlerCache() {
 		o.handlers["POST"] = make(map[string]http.Handler)
 	}
 	o.handlers["POST"]["/payments"] = payments.NewCreatePayment(o.context, o.PaymentsCreatePaymentHandler)
+
+	if o.handlers["GET"] == nil {
+		o.handlers["GET"] = make(map[string]http.Handler)
+	}
+	o.handlers["GET"]["/payments/{id}"] = payments.NewGetPayment(o.context, o.PaymentsGetPaymentHandler)
 
 }
 
